change dropdown for inserting class_participants to include name and class schedule

--- a/templates/class_participants.j2
+++ b/templates/class_participants.j2
@@ -66,20 +66,17 @@
     <form method="POST" action="/class_participants" id="addParticipants">
         <legend><strong>Add Class Participant</strong></legend>
             <fieldset class="fields">
-                <label>Member ID</label> 
+                <label>Member</label> 
                 <select name="member_id" id="member_id" required>
                 {% for member in members %}
-                    {% for key in member.keys() %}
-                        <option value="{{member[key]}}"> {{member[key]}} </option>
-                    {% endfor %}
+                        <option value="{{member['member_id']}}"> {{member['Name']}} </option>
                 {% endfor %}
                     </select>
-                <label>Workout Class ID</label> 
+                <label>Workout Class</label> 
                 <select name="class_id" id="class_id" required>
                 {% for class in classes %}
-                    {% for key in class.keys() %}
-                        <option value="{{class[key]}}"> {{class[key]}} </option>
-                    {% endfor %}
+                      <option value="{{class['class_id']}}"> {{class['Class']}} </option>
+                    
                 {% endfor %}
                 </select>
             </fieldset>
