--- a/templates/index.j2
+++ b/templates/index.j2
@@ -2,7 +2,7 @@
 
 <head>
     <title> Jimbo's Gym </title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="/static/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
