reference all template pages to style.css

--- a/templates/classes.j2
+++ b/templates/classes.j2
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Classes</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="/static/style.css" rel="stylesheet" type="text/css"/>
     <script language="JavaScript">
         function showform(dowhat) {
             if(dowhat == 'insert') {
