--- a/templates/edit_member.j2
+++ b/templates/edit_member.j2
@@ -2,7 +2,7 @@
 
 <head>
 	<title>Edit Member</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="/static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body> 
