--- a/templates/gyms.j2
+++ b/templates/gyms.j2
@@ -2,7 +2,7 @@
 
 <head>
 <title>Gyms</title>
-<link href="style.css" rel="stylesheet" type="text/css"/>
+<link href="/static/style.css" rel="stylesheet" type="text/css"/>
     <script language="JavaScript">
         function showform(dowhat) {
             if(dowhat == 'insert') {
