--- a/templates/edit_instructor.j2
+++ b/templates/edit_instructor.j2
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Edit Instructor</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="/static/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
