--- a/templates/edit_gym.j2
+++ b/templates/edit_gym.j2
@@ -33,14 +33,16 @@
     <p>&nbsp;</p>
     <div id="edit">
     <form method="POST" action="/edit_gym/{{data[0].Gym_ID}}" id="editGym">
-        <legend><strong>Edit Gym</strong></legend>
+        <legend><strong>Edit Gym {{data[0].Gym_ID}}</strong></legend>
             <fieldset class="fields">
-                <label>Gym ID: {{data[0].Gym_ID}}</label>
+
                 <input type="hidden" value="{{data[0].Gym_ID}}" id="gym_id" name="gym_id">
                 <label>Gym Address:</label> 
                     <input type="text" name="gym_address" id="gym_address" value="{{data[0].Address}}" required>
+                    <p></p>
                 <label>Opening Time:</label> 
                     <input type="time" name="opening_time" id="opening_time" value="{{data[0].OPENS}}" required>
+                    <p></p>
                 <label>Closing Time:</label> 
                     <input type="time" name="closing_time" id="closing_time" value="{{data[0].CLOSES}}" required>
                 <p></p>
