--- a/templates/plans.j2
+++ b/templates/plans.j2
@@ -3,6 +3,7 @@
 <head>
 <title>Membership Plans</title>
 <link href="/static/style.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script language="JavaScript">
         function showform(dowhat) {
             if(dowhat == 'insert') {
@@ -33,11 +34,12 @@
 <a href="plans">Membership Plans</a> |
 <a href="classes">Classes</a> | 
 <a href="class_participants">Class Participants</a>]
+<p></p>
 
 <div id="browse">
     <p><a href="#" onClick="newPlan()"><strong>Add New Membership Plan</strong></a> </p>
     <strong>Browse Membership Plans</strong>
-    <table border="1" cellpadding="4">
+    <table cellpadding="4">
         {% if data %}
             <thead>
                 <tr>
@@ -52,8 +54,8 @@
                     {% for key in item.keys() %}
                         <td> {{ item[key] }} </td>
                     {% endfor %}
-                    <td><a href="edit_plan/{{item.Membership_Plan_ID}}" class="btn btn-default">Edit</a></td>
-                    <td><a href="delete_plan/{{item.Membership_Plan_ID}}" class="btn btn-default">Delete</a></td>
+                    <td><a href="edit_plan/{{item.Membership_Plan_ID}}" class="btn btn-default"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+                    <td><a href="delete_plan/{{item.Membership_Plan_ID}}" class="btn btn-default"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
                 </tr>
             {% endfor %}
 
@@ -68,11 +70,13 @@
             <fieldset class="fields">
                 <label>Monthly Fee</label> 
                     <input type="decimal" name="monthly_fee" id="monthly_fee" required>
+                    <p></p>
                 <label>Weights/Cardio</label> 
                     <select name="weight_cardio" id="weight_cardio" required>
                         <option value=0> 0 </option>
                         <option value=1> 1 </option>
                     </select>
+                    <p></p>
                 <label>Spa Room</label> 
                     <select name="spa_room" id="spa_room" required>
                         <option value=0> 0 </option>
@@ -84,6 +88,7 @@
                         <option value=0> 0 </option>
                         <option value=1> 1 </option>
                     </select>
+                    <p></p>
                 <label>Ball Court</label> 
                     <select name="ballcourt" id="ballcourt" required>
                         <option value=0> 0 </option>
