no longer allow negative number in duration field for classes. Fixed insert and updates for instructors page.

--- a/templates/classes.j2
+++ b/templates/classes.j2
@@ -74,7 +74,7 @@
                     <input type="datetime-local" name="schedule" id="schedule" required>
                     <p></p>
                 <label>Duration</label>
-                    <input type="number" name="duration" id="duration" required>
+                    <input type="number" name="duration" id="duration" min="0" required>
                     <p></p>
                 <label>Instructor</label>
                     <select name="instructor_id" id="instructor_id">
