--- a/templates/edit_gym.j2
+++ b/templates/edit_gym.j2
@@ -41,7 +41,7 @@
                     <input type="text" name="gym_address" id="gym_address" value="{{data[0].Address}}" required>
                     <p></p>
                 <label>Opening Time:</label> 
-                    <input type="time" name="opening_time" id="opening_time" value="{{data[0].OPENS}}" required>
+                    <input type="time" name="opening_time" id="opening_time" value='{{data[0].OPENS}}' required>
                     <p></p>
                 <label>Closing Time:</label> 
                     <input type="time" name="closing_time" id="closing_time" value="{{data[0].CLOSES}}" required>
