--- a/templates/edit_instructor.j2
+++ b/templates/edit_instructor.j2
@@ -50,6 +50,9 @@
                 <label>Email</label> 
                     <input type="email" name="email" id="email" value="{{data[0].Email}}" required>
                     <p></p>
+                <label>Phone Number</label> 
+                    <input type="tel" name="phone_number" id="phone_number" value="{{data[0].Phone_Number}}" required>
+                    <p></p>
                 <label>Gym</label> 
                 <select name="gym_id" id="gym_id">
                     <option value="0">&nbsp;</option>
