--- a/templates/edit_class.j2
+++ b/templates/edit_class.j2
@@ -41,7 +41,7 @@
                     <input type="text" name="schedule" id="schedule" value="{{data[0].Schedule}}" required>
                     <p></p>
                 <label>Duration</label> 
-                    <input type="text" name="duration" id="duration" value="{{data[0].Duration}}" required>
+                    <input type="number" name="duration" id="duration" min="0" value="{{data[0].Duration}}" required>
                 <p></p>
                 <label>Instructor</label> 
                     <select name="instructor_id" id="instructor_id" required>
