--- a/templates/instructors.j2
+++ b/templates/instructors.j2
@@ -81,10 +81,10 @@
                         <input type="date" name="birthday" id="birthday" required>
                         <p></p>
                     <label>Email</label> 
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" required>
                         <p></p>
                     <label>Phone Number</label> 
-                        <input type="text" name="phone_number" id="phone_number" required>
+                        <input type="tel" name="phone_number" id="phone_number" placeholder="123-456-7890" required>
                         <p></p>
                     <label>Gym</label>
                         <select name="gym_id" id="gym_id">
